# uvp

./: LICENSE  README.md  how_to_release.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: publish.yml
src/uvp/: __init__.py  __main__.py  core.py
src/uvp/commands/: base.py
tests/: test_commands.py
