[project]
name = "uvp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Carlos Eduardo Ferreyra", email = "eduferreyraok@gmail.com" }
]
requires-python = ">=3.10"
dependencies = []

[project.scripts]
uvp = "uvp.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
