[project]
name = "uvp"
version = "0.0.1"
description = "All-in-one tool for managing and deploying Python projects"
readme = "README.md"
authors = [
    { name = "Carlos Eduardo Ferreyra", email = "eduferreyraok@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "typer>=0.15.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
]

[project.scripts]
uvp = "uvp.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
